# TCAX

./: ReadMe.md
src/: CMakeLists.txt
src/TCAX/assoc/: assoc.cpp  assoc.sln  assoc.vcxproj
src/TCAX/pixMagick/: pixMagick.vcxproj
src/TCAX/pixMagick/ImageMagick/Magick++/: Include.h
src/TCAX/pixMagick/ImageMagick/magick/: magick-config.h
src/TCAX/pixStone/: pixStone.sln  pixStone.vcxproj
src/TCAX/pixStone/ImageStone/: ImageStone.h
src/TCAX/pixStone/ImageStone/include/command/: Command.h
src/TCAX/sylHelper/KASS/: KASS.cpp  KASS.sln  KASS.vcxproj  stdafx.h
src/TCAX/tcasHelper/timeShift/: std.h  timeShift.sln  timeShift.vcxproj
src/TCAX/tcax/: tcax.h  tcax.sln  tcax.vcxproj  tcax.vcxproj.filters  tcax_cmd.c  tcax_cmd.cpp
src/TCAX/tcax/FreeType/: freetype.lib
src/TCAX/tcax/gdiFont/: gdiFont.sln  gdiFont.vcxproj
src/TCAX/tcax/libtcc/: libtcc.def  libtcc.sln  libtcc.vcxproj  libtcc.vcxproj.filters  string.c  tcc.c
src/TCAX/tcax/libtm/: tm.h
src/TCAX/tcax/tcaxLib/: image.h  tcasfunc.c  tcasfunc.h  tcaxLib.sln  tcaxLib.vcxproj  text.h
src/TCAX/tcax/tcaxLib/libpng/: libpng.lib  libpng15.lib  zlib.lib
src/TCAX/tcax/tcaxPy/: tcaxPy.py  tcaxPy.sln  tcaxPy.vcxproj
src/TCAX/tccHelper/fontColor/: fontColor.sln  fontColor.vcxproj  stdafx.h
src/TCAX/tccHelper/fontColor/fontColor_dll/: fontColor_dll.cpp  fontColor_dll.sln  fontColor_dll.vcxproj
src/TCAX/util/cairo/pycairo/: cmd
src/TCAX/util/cairo/pycairo/cairo-1.16.0/: cairo-compile.txt
src/TCAX/util/cairo/pycairo/lpng1530/projects/vstudio/libpng/: libpng.vcxproj
src/TCAX/util/cairo/pycairo/lpng1530/projects/vstudio/pnglibconf/: pnglibconf.vcxproj
src/TCAX/util/cairo/pycairo/lpng1530/projects/vstudio/pngtest/: pngtest.vcxproj
src/TCAX/util/cairo/pycairo/lpng1530/projects/vstudio/pngvalid/: pngvalid.vcxproj
src/TCAX/util/cairo/pycairo/lpng1530/projects/vstudio/zlib/: zlib.vcxproj
src/TCAX/util/cairo/pycairo/pixman-0.32.4/: Makefile.win32
src/TCAX/util/cairo/pycairo/pycairo-1.18.0/cairo/: cairomodule.c  pycairo.sln  pycairo.vcxproj  pycairo.vcxproj.filters  surface.c
src/TCAX/util/cairo/pycairo/pycairo-1.18.0/cairo/cairo/: cairo-static.lib  cairo.lib  libpng.lib  pixman-1.lib  zlib.lib
src/lib/: lpng1530.7z
src/lib/lpng1530/projects/vstudio/: vstudio.sln
src/lib/lpng1530/projects/vstudio/libpng/: libpng.vcxproj
src/lib/lpng1530/projects/vstudio/pnglibconf/: pnglibconf.vcxproj
src/lib/lpng1530/projects/vstudio/pngtest/: pngtest.vcxproj
src/lib/lpng1530/projects/vstudio/pngvalid/: pngvalid.vcxproj
src/lib/lpng1530/projects/vstudio/zlib/: zlib.vcxproj
src/libtcas/tcas/: tcas.c  tcas.cpp  tcas.h  tcas.vcxproj
src/libtcas/tcas/zlib/: zlib.lib
src/tcasFilter/: avsfilter.h  tcasFilter.cpp  tcasFilter.h  tcasFilter.sln  tcasFilter.vcxproj  tcasFilter.vcxproj.filters  vsfilter.cpp  vsfilter.h
src/tcasFilter/zlib/x64/: zlib.lib
src/tcax/: CMakeLists.txt  main.cpp  map.c  map.h  py.c  py.h  string.c  string.h  syl.c  syl.h  tcax.cpp  tcax.h  tcax.vcxproj  tcc.c  tcc.h  tccmap.c  tccmap.h  tm.cpp  tm.h
src/tcaxLib/: CMakeLists.txt  common.h  file.cpp  file.h  image.cpp  image.h  pix.cpp  pix.h  std.h  tcaxLib.vcxproj  text.cpp  text.h  utility.cpp  utility.h
src/tcaxLib/python/: tcaxLib.cpp  tcaxlib.cpp
src/tcaxLib/test/: test.py
src/tcaxPy/: tcaxPy.py
src/util/audio/tcAudio/: tcAudio.sln  tcAudio.vcxproj
src/util/video/tcVideo/: tcVideo.sln  tcVideo.vcxproj
